k8s/001-setup.yml
apiVersion: v1
kind: Namespace
metadata:
  name: vedec-prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: es
  namespace: vedec-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: es
  template:
    metadata:
      labels:
        app: es
    spec:
      containers:
        - name: es
          image: ghcr.io/ogrodje/elasticsearch:latest
          ports: [ { containerPort: 9200 } ]

          resources:
            limits:
              memory: "2Gi"

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vedec-server
  namespace: vedec-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vedec-server
  template:
    metadata:
      labels:
        app: vedec-server
    spec:
      containers:
        - name: vedec-server
          image: ghcr.io/ogrodje/vedec:latest
          args: [ "server",
                  "-P", "$(PORT)",
                  "--elasticSearchURL", "http://es:9200",
                  "--elasticSearchPassword", "$(ELASTICSEARCH_PASSWORD)",
                  "--hygraphURL", "$(HYGRAPH_URL)" ]
          ports: [ { containerPort: 4441 } ]
          resources:
            limits:
              memory: "1Gi"
---
apiVersion: v1
kind: Service
metadata:
  name: es
  namespace: vedec-prod
spec:
  selector:
    app: es
  ports:
    - protocol: TCP
      port: 9200
      targetPort: 9200
---
apiVersion: v1
kind: Service
metadata:
  name: vedec-server
  namespace: vedec-prod
spec:
  selector:
    app: vedec-server
  ports:
    - protocol: TCP
      port: 4441
      targetPort: 4441
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vedec-prod-ingress
  namespace: vedec-prod
  labels:
    version: "1"
  annotations: { }
  #nginx.ingress.kubernetes.io/ssl-redirect: "true"
  #nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: search.ogrodje-one.ogrodje.si
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: vedec-server
                port:
                  number: 4441
